#ifndef CLIENTECIVIL_HPP
#define CLIENTECIVIL_HPP
#include "Cliente.hpp"
#include "Veiculo.hpp"

class ClienteCivil: Cliente{
    Veiculo veiculo;
};

#endif