#ifndef CONTABILIDADE_HPP
#define CONTABILIDADE_HPP

class Contabilidade{
    
};

#endif