#ifndef TXTHANDLER_HPP
#define TXTHANDLER_HPP
#include "FileHandler.hpp"

class TxtHandler : FileHandler{
    
};

#endif