#ifndef PAGAMENTO_HPP
#define PAGAMENTO_HPP

class Pagamento{

};

#endif