CREATE TABLE IF NOT EXISTS CLIENTES(
    id_cliente INTEGER PRIMARY KEY AUTOINCREMENT,
    nome VARCHAR(60) NOT NULL
);

CREATE TABLE IF NOT EXISTS CLIENTES_CIVIL(
    id_cliente_civil INTEGER PRIMARY KEY AUTOINCREMENT, 
    id_cliente INTEGER,
    cpf VARCHAR (15) NOT NULL UNIQUE,

    FOREIGN KEY (id_cliente) REFERENCES CLIENTES(id_cliente)
);

CREATE TABLE IF NOT EXISTS CLIENTES_EMPRESA(
    id_cliente_empresa INTEGER PRIMARY KEY AUTOINCREMENT, 
    id_cliente INTEGER,
    cnpj VARCHAR(19) NOT NULL UNIQUE,

    FOREIGN KEY (id_cliente) REFERENCES CLIENTES(id_cliente)
);

CREATE TABLE IF NOT EXISTS SUPERMERCADOS(
    id_estacionamento INTEGER PRIMARY KEY AUTOINCREMENT, 
    cnpj VARCHAR(19) NOT NULL UNIQUE, 
    faturamento_bruto FLOAT, 
    total_impostos FLOAT, 
    faturamento_liquido FLOAT, 
    lucro FLOAT
);

CREATE TABLE IF NOT EXISTS FUNCIONARIOS(
    id_funcionario INTEGER PRIMARY KEY AUTOINCREMENT,
    nome VARCHAR(20),
    sobrenome VARCHAR(50),
    cpf VARCHAR (15) NOT NULL UNIQUE,
    salario_bruto FLOAT NOT NULL,
    salario_liquido FLOAT NOT NULL
);

CREATE TABLE IF NOT EXISTS MARCAS(
    id_marca INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT,
    nome VARCHAR(20)
);

CREATE TABLE IF NOT EXISTS TIPOS_PRODUTO(
    id_tipo INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT,
    nome VARCHAR(20) NOT NULL
);

CREATE TABLE IF NOT EXISTS PRODUTOS(
    id_produto INTEGER PRIMARY KEY AUTOINCREMENT,
    nome VARCHAR(50),
    id_marca INTEGER NOT NULL,
    id_tipo INTEGER NOT NULL,
    peso_liquido FLOAT,
    preco_unitario FLOAT,
    unidades_disponiveis INTEGER,

    FOREIGN KEY (id_marca) REFERENCES MARCAS (id_marca),
    FOREIGN KEY (id_tipo) REFERENCES TIPO (id_tipo)
);

CREATE TABLE IF NOT EXISTS VENDAS(
    id_venda INTEGER PRIMARY KEY AUTOINCREMENT,
    id_cliente INTEGER NOT NULL,
    descricao VARCHAR(255),
    data_venda VARCHAR(11),
    
    FOREIGN KEY (id_cliente) REFERENCES CLIENTES(id_cliente)
);

CREATE TABLE IF NOT EXISTS ITENS_VENDA(
    id_itemvenda INTEGER PRIMARY KEY AUTOINCREMENT,
    id_venda INTEGER NOT NULL,
    id_produto INTEGER NOT NULL,
    quantidade INTEGER NOT NULL,
    preco_unitario FLOAT,
    valor_total FLOAT,

    FOREIGN KEY (id_venda) REFERENCES VENDAS(id_venda),
    FOREIGN KEY (id_produto) REFERENCES PRODUTOS(id_produto)
);