```mermaid

classDiagram

class Funcionario{
    -string nome
    -string cpf
    -double salarioBruto
    -double salarioLiquido

    +void setSalarioBruto(double salarioBruto)
    +void setSalarioLiquido(double salarioLiquido)
    +void setCpf(string cpf)
    +void setNome(string nome)
    +Funcionario(string nome, string cpf)
    +FUncionario(string nome, string cpf, double salarioBruto)
}

class Supermercado{
    -string nome
    -string cnpj
    -unsigned numeroVagasPorAndar
    -unsigned numeroAndares
    -double faturamentoBruto
    -double totalImpostos
    -double faturamentoLiquido
    -double lucro

    +string getNome()
    +string getCnpj()
    +unsigned getNumeroVagasPorAndar()
    +unsigned getNumeroAndares()
    +double getFaturamentoBruto()
    +double getFaturamentoLiquido()
    +double getLucro()
}

Supermercado *.. "1..n" Funcionario: tem

class Pagamento{
    -string metodo
    -double valorTotal

    Pagamento(string metodo, double tarifa)
    
    -void fazerRelatorioPagamento()
    -bool ehValido()
    +void fazerPagamento(double &faturamentoBruto)
}

class Cliente{
    <<interface>>
    -time_t dataDeEntrada;
    -time_t dataDeSaida;
    -double tarifaTotal

    +double getTarifaTotal()
    +void setTarifaTotal(double tarifaTotal)
    +unsigned getHorasGastas()
}

class ClienteEmpresa{
    -List~Veiculo*~ veiculos
    -double desconto

    static +double getTarifaReal()
}

class ClienteCivil{
    -Veiculo veiculo
}

Cliente <|-- ClienteEmpresa: é um
Cliente <|-- ClienteCivil: é um

ClienteCivil <.. "1..1" Veiculo: tem

Supermercado o.. Cliente

class Contabilidade{
    static -double calcularImpostosTrabalhistas(List~Funcionario*~ *funcionarios)
    static -double calcularImpostosEstataisFaturamento(double &faturamento)
    static +double calcularImpostosSobFaturamento()
    static +double calcularImpostosSobTerreno()
    static +double calcularImpostosTotais()
    static +double definirLucro(double &lucro)
}

Supermercado *.. "1..1" Contabilidade: tem

class FileHandler{
    <<interface>>

    -string tipoArquivo
    -string nomeArquivo

    void setNomeArquivo(string nomeArquivo)
    void setTypeArquivo(string nomeArquivo)
}

class SQLiteHandler{
    -bool aberto

    -bool alterarTabela(const string& tabela, const string& parametro)
    -bool editarTabela(const string& tabela, const string& parametro)
    -bool excluirTabela(const string& tabela, const string& parametro)

    +bool executarOperacao(Operacao operacao, const string& tabela, const string& parametro)
    
}

class TXTHandler{
    
}

class Operacao{
    <<enumeration>>
    CRIAR=1
    ALTERAR
    EDITAR
    EXCLUIR
}

FileHandler <|.. TXTHandler: é um
FileHandler <|.. SQLiteHandler: é um
SQLiteHandler .. Operacao: usa
Pagamento .. FileHandler: salva

```
